deployment/stable2025-04/site-config/patches/add-ha-deployments.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: sas-deployments-2-replicas
patch: |-
  - op: add
    path: /spec/replicas
    value: 2
target:
  kind: Deployment
