deployment/stable2025-04/site-config/patches/add-storageclassname.yaml
---
# statefulsets do not declare storageClassName
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: kyverno-add-storageclassname-statefulsets
patch: |-
  - op: add
    path: /spec/volumeClaimTemplates/0/spec/storageClassName
    value:
      "$SC"
target:
  annotationSelector: sas.com/component-name in (sas-rabbitmq-server,sas-consul-server,sas-redis-server)
  kind: StatefulSet
