deployment/stable2025-04/site-config/patches/set-cpu-limits.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: set-memory-limits-500m
patch: |-
  - op: add
    path: /spec/template/spec/containers/0/resources/limits/cpu
    value:
      250m
target:
  kind: Deployment
  annotationSelector: sas.com/component-name in (sas-analytics-events, sas-analytics-execution, sas-annotations, sas-app-registry, sas-arke, sas-audit, sas-batch, sas-cas-control, sas-cas-operator, sas-code-debugger-app, sas-code-debugger, sas-collaboration, sas-config-reconciler, sas-connect-spawner, sas-connect, sas-content, sas-data-agent-services, sas-data-flows, sas-data-mining-project-resources, sas-data-mining-risk-models, sas-data-quality-services, sas-data-server-operator, sas-data-sour [...]
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: set-memory-limits-1000m
patch: |-
  - op: add
    path: /spec/template/spec/containers/0/resources/limits/cpu
    value:
      500m
target:
  kind: Deployment
  annotationSelector: sas.com/component-name in (sas-formats, sas-prepull)
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: set-memory-limits-2000m
patch: |-
  - op: add
    path: /spec/template/spec/containers/0/resources/limits/cpu
    value:
      1000m
target:
  kind: Deployment
  annotationSelector: sas.com/component-name in (sas-analytics-gateway, sas-analytics-resources, sas-business-rules, sas-catalog-services, sas-compute, sas-configuration, sas-credentials, sas-data-explorer-app, sas-data-mining-models, sas-data-mining-results, sas-data-plans, sas-decisions, sas-discovery-services, sas-files, sas-identities, sas-import-9, sas-job-execution, sas-launcher, sas-logon-app, sas-natural-language-generation, sas-reference-data, sas-report-execution, sas-report-services-g [...]
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: set-memory-limits-4000m
patch: |-
  - op: add
    path: /spec/template/spec/containers/0/resources/limits/cpu
    value:
      2000m
target:
  kind: Deployment
  annotationSelector: sas.com/component-name in (sas-authorization, sas-microanalytic-score)
