deployment/stable2025-04/site-config/patches/distribute-ingress-certificate.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: add-ingress-certificate-attrs
patch: |-
    - op: add
      path: /spec/tls
      value:
        certificate: {}
        key: {}
        termination: reencrypt
        insecureEdgeTerminationPolicy: Redirect
target:
  kind: Route
